Fix overflow not working in identify results list

--- a/QWC2Components/components/style/IdentifyViewer.css
+++ b/QWC2Components/components/style/IdentifyViewer.css
@@ -8,6 +8,7 @@
 #IdentifyViewer div.identify-results-container {
     overflow-y: auto;
     flex: 1 1 50%;
+    min-height: 0;
 }
 
 #IdentifyViewer ul {
@@ -88,6 +89,7 @@
 
 #IdentifyViewer .identify-result-frame {
     flex: 1 1 50%;
+    min-height: 0;
     display: flex;
     flex-direction: column;
     border: 1px solid @item_border@;
